@@ -553,6 +553,9 @@
       <id>printer/Lexmark-E120</id>
     </printer>
     <printer>
+      <id>printer/Lexmark-E230</id>
+    </printer>
+    <printer>
       <id>printer/Lexmark-Optra_E</id>
     </printer>
     <printer>
