@@ -677,6 +677,9 @@
       <id>printer/Kyocera-KM-6230</id>
     </printer>
     <printer>
+      <id>printer/Lexmark-E230</id>
+    </printer>
+    <printer>
       <id>printer/Lexmark-Optra_E</id>
     </printer>
     <printer>
