@@ -216,6 +216,9 @@
       <id>printer/Kyocera-KM-6230</id>
     </printer>
     <printer>
+      <id>printer/Lexmark-E230</id>
+    </printer>
+    <printer>
       <id>printer/Ricoh-Aficio_220</id>
     </printer>
     <printer>
