@@ -12,6 +12,15 @@
   <lang>
     <pcl level="6" />
   </lang>
+  <autodetect>
+    <general>
+      <ieee1284>MANUFACTURER:Lexmark International;COMMAND SET:PCL 6 Emulation, PostScript Level 3 For Mac Emulation, NPAP, PJL;MODEL:Lexmark E230;CLS:PRINTER;DES:Lexmark E230;CID:Lexmark_Internationa0D83, Lexmark_InternationaCC02, Lexmark_Internationa9D12, Lexmark_Internationa5DD3;COMMENT:ECP1.0, LV_043D, LP_009A, LF_0035;</ieee1284>
+      <commandset>PCL 6 Emulation, PostScript Level 3 For Mac Emulation, NPAP, PJL</commandset>
+      <description>Lexmark E230</description>
+      <manufacturer>Lexmark International</manufacturer>
+      <model>Lexmark E230</model>
+    </general>
+  </autodetect>
   <functionality>A</functionality>
   <driver>pxlmono</driver>
   <comments>
