@@ -3,6 +3,11 @@
 	* opt/GS-HalftoningAlgorithm-Gray.xml: Removed, this option does not
 	  work any more with current Ghostscript (Ubuntu bug 659398).
 
+	* driver/hpijs-pcl5e.xml, driver/lj4dith.xml, driver/lj5gray.xml,
+	  driver/ljet4.xml, driver/ljet4d.xml, printer/Lexmark-E230.xml:
+	  Updated entry for the Lexmark E230: Device ID, PCL-5e drivers
+	  (Ubuntu bug 821818).
+
 	* printer/Brother-HL-2070N.xml, driver/hl1250.xml,
 	  driver/hpijs-pcl5e.xml, driver/lj4dith.xml, driver/lj5gray.xml,
 	  driver/ljet4.xml, driver/pxlmono.xml: Added the Brother HL-2070N
